# LLM-API-Key-Proxy

./: .editorconfig  .env.example  .env.telemetry.example  .env.template  .gitignore  .pre-commit-config.yaml  .runner-task.md  AGENTS.md  AI_HANDOFF.md  ALL_WORK_COMPLETE.md  AUTONOMOUS_WORK_SUMMARY.md  BUGS.md  CODEBASE_AUDIT.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_SUMMARY.md  CONFIGURATION_FIXES.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PROCESS.md  DEPLOYMENT_SUCCESS.md  DESIGN.md  DOCUMENTATION.md  Deployment guide.md  Dockerfile  FINAL_COMPLETION_REPORT.md  FINAL_TYPE_SAFETY_FIXES.md  GEMINI_API_KEY_GUIDE.md  GROQ_API_KEY_GUIDE.md  HANDOFF_OPUS_2026-06-24.md  HTTPS_AUTOMATED_SETUP.md  HTTPS_RUNNING.md  HTTPS_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ROADMAP.md  LICENSE  LSP_ERROR_ANALYSIS.md  LSP_FIXES_SUMMARY.md  OPENCODE_CONFIG_GUIDE.md  OPENCODE_INTEGRATION_ALTERNATIVES.md  OPTIMIZATION_CHECKLIST.md  (+60 more)
src/rotator_library/: G4F_INTEGRATION_COMPLETE.md  PHASE_2_4_SUMMARY.md  README.md  __init__.py  alert_manager.py  background_refresher.py  benchmark_fetcher.py  benchmark_models.py  capability_fetcher.py  client.py  config_validator.py  cooldown_manager.py  cost_efficiency.py  credential_manager.py  credential_tool.py  data_schemas.py  data_validator.py  database.py  db_models.py  distributed_gate.py  dynamic_chain.py  error_handler.py  failure_logger.py  fetch_artificial_analysis_data.py  json_encoder.py  leaderboard_updater.py  live_scraper.py  llm_aggregated_leaderboard.py  model_aliases.py  model_capability_db.py  model_definitions.py  (+22 more)
(+451 files in other folders)
