[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rotator_library"
version = "1.0"
authors = [
    { name="Mirrowel", email="nuh@uh.com" },
]
description = "A robust Python client for intelligent API key rotation and retry logic, leveraging LiteLLM. It manages usage, handles various API errors (rate limits, server errors, authentication), and supports dynamic model discovery across multiple LLM providers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "litellm",
    "filelock",
    "httpx"
]

[project.urls]
"Homepage" = "https://github.com/Mirrowel/LLM-API-Key-Proxy"
"Bug Tracker" = "https://github.com/Mirrowel/LLM-API-Key-Proxy/issues"

[tool.setuptools.packages]
find = { where = ["."], include = ["rotator_library*"] }
